# PoreReax

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
porereax/: __init__.py  angle.py  bond_length.py  bond_structure.py  charge.py  density.py  meta_sampler.py  molecule_structure.py  plot.py  rdf.py  regions.py  sample.py  simulate.py  utils.py
porereax/templates/: ana.py  reax.job  reax_run_0.lmp  reax_run_n.lmp  run_n.lmp
src/porereax/: __init__.py  angle.py  bond_length.py  charge.py  meta_sampler.py  molecule_structure.py  regions.py  sample.py
src/porereax/templates/: ana.py  reax.ffield  reax.job
tests/: conftest.py  test_sample.py  test_simulate.py
tests/data/: test_job.job  test_structure.gro
