[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "porereax"
version = "0.0.1"
authors = [
    {name = "Karl Prokop", email = "st184141@stud.uni-stuttgart.de"}
]
maintainers = [
    {name = "Karl Prokop", email = "st184141@stud.uni-stuttgart.de"}
]
description = "A tool for generating and analysing reactive pore simulations using ReaxFF and LAMMPS."
readme = "README.md"
license = {text = "GNU General Public License v3.0"}
keywords = ["pore", "ReaxFF", "LAMMPS", "molecular dynamics", "simulation", "analysis"]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "ovito",
    "matplotlib",
    "jinja2",
    "pyyaml",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Chemistry",
]

[project.urls]
Homepage = "https://github.com/ProkopK/PoreReax"
Repository = "https://github.com/ProkopK/PoreReax"
Issues = "https://github.com/ProkopK/PoreReax/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["porereax*"]

[tool.setuptools.package-data]
porereax = [
    "templates/**/*",
]