[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "porereax"
version = "0.0.1"
authors = [
    {name = "Karl Prokop", email = "st184141@stud.uni-stuttgart.de"}
]
maintainers = [
    {name = "Karl Prokop", email = "st184141@stud.uni-stuttgart.de"}
]
description = "A tool for generating and analysing reactive pore simulations using ReaxFF and LAMMPS."
readme = "README.md"
license = {text = "GNU General Public License v3.0"}
keywords = ["pore", "ReaxFF", "LAMMPS", "molecular dynamics", "simulation", "analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Chemistry",
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "ovito",
    "matplotlib",
    "jinja2",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
]

[project.urls]
Homepage = "https://github.com/ProkopK/PoreReax"
Repository = "https://github.com/ProkopK/PoreReax"
Issues = "https://github.com/ProkopK/PoreReax/issues"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = "-ra -q --cov=src/porereax --cov-report=term-missing"

[tool.coverage.run]
source = ["src/porereax"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["porereax*"]

[tool.setuptools.package-data]
porereax = [
    "templates/**/*",
]